--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,39 @@
              xmlns:local="clr-namespace:MealMaster"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+        <ResourceDictionary>
+            <Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="5,5,5,5"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="5,0,5,5"/>
+                <Setter Property="Padding" Value="8"/>
+            </Style>
+            <Style TargetType="PasswordBox">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="5,0,5,5"/>
+                <Setter Property="Padding" Value="8"/>
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Margin" Value="5,0,5,5"/>
+                <Setter Property="Padding" Value="8"/>
+                <Setter Property="Background" Value="#FFFF6A00"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="BorderBrush" Value="#FFB84D00"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="#FF8C4600"/>
+                        <Setter Property="Foreground" Value="White"/>
+                    </Trigger>
+                </Style.Triggers>
+
+            </Style>
+            <Style TargetType="Grid">
+                <Setter Property="Background" Value="Gainsboro"/>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources></Application>
