--- a/View/TestDayWindow.xaml
+++ b/View/TestDayWindow.xaml
@@ -1,12 +1,33 @@
 ﻿<Window x:Class="MealMaster.View.TestDayWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MealMaster.View"
-        mc:Ignorable="d"
-        Title="TestDayWindow" Height="450" Width="800">
+        Title="Day Window" Height="500" Width="800">
+
     <Grid>
-        
+        <StackPanel Orientation="Vertical">
+            <ListBox ItemsSource="{Binding Recipes}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Text="{Binding Name}" />
+
+                            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                <Button Content="Edit" Command="{Binding DataContext.EditRecipeCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding}"/>
+                                <Button Content="Delete" Command="{Binding DataContext.DeleteRecipeCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding}"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <Button Content="Add New Recipe" Command="{Binding AddNewRecipeCommand}"/>
+            <TextBlock Text="{Binding DayCalories}" />
+            <Button Content="Add" Click="XX"/>
+        </StackPanel>
     </Grid>
 </Window>
