--- a/View/AddIngredientWindow.xaml
+++ b/View/AddIngredientWindow.xaml
@@ -2,7 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:vm="clr-namespace:MealMaster.ViewModel"
         Title="Add Ingredient Window" Height="300" Width="500">
+
+    <Window.DataContext>
+        <vm:AdIngredientViewModel/>
+    </Window.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -20,12 +25,12 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1" Margin="5">
-            <TextBox x:Name="NameTextBox" />
-            <TextBox x:Name="WeightTextBox" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="FatWTextBox" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="CarbWTextBox" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="ProteinWTextBox" TextChanged="TextBox_TextChanged"/>
-            <Button Content="Add" Click="AddButton_Click"/>
+            <TextBox x:Name="NameTextBox" Text="{Binding NewIng.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="WeightTextBox" Text="{Binding NewIng.Weight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="FatWTextBox" Text="{Binding NewIng.FatW, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="CarbWTextBox" Text="{Binding NewIng.CarbW, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="ProteinWTextBox" Text="{Binding NewIng.ProteinW, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="TextBox_TextChanged"/>
+            <Button Content="Add" Command="{Binding AddCommand}" VerticalAlignment="Bottom"/>
         </StackPanel>
 
         <lvc:PieChart Grid.Column="2" Margin="5" Visibility="Visible" Name="PiePP" LegendLocation="Bottom">
